# ptpython-docker

./: .gitignore  Makefile  README.md
3.7/base/: Dockerfile  pyproject.toml  requirements.txt
3.7/tf1.15/: Dockerfile
3.7/tf2.4/: Dockerfile
3.8/base/: Dockerfile  pyproject.toml  requirements.txt
3.9/base/: Dockerfile  pyproject.toml  requirements.txt
