[tool.poetry]
name = "ptpy-3.9-base"
version = "0.1.0"
description = ""
authors = ["xkumiyu <xkumiyu@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
ptpython = "^3.0.8"
numpy = "^1.19.4"
scipy = "^1.6.0"
pandas = "^1.2.0"
opencv-python = "^4.5.1"
flake8 = "^3.8.4"
black = "^20.8b1"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
